fourth commit to Yummy App

--- a/index.html
+++ b/index.html
@@ -214,6 +214,6 @@
     <!-- ^ Bootstrap5 js file -->
     <script src="./js/bootstrap.bundle.min.js"></script>
     <!-- ^ My js file -->
-    <script src="/js/index.js"></script>
+    <script src="./js/index.js"></script>
   </body>
 </html>
